--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.jpa.datasource=POSTGRESQL
 spring.datasource.platform=postgres
 #spring.datasource.url=jdbc:postgresql://181.177.143.185:5432/db_matadero
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_matadero
+spring.datasource.url=jdbc:postgresql://localhost:5433/matadero
 spring.datasource.username=postgres
-spring.datasource.password=ADMIN
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl_auto=update
 spring.jpa.sql=true
 ##Aditional properties JPA
