--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 HELP.md
-.gradle
+# Carpetas de Gradle
+.gradle/
 build/
+.gradle
+
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
