feat: building updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.jpa.datasource=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_matadero
-spring.datasource.username=odeco
-spring.datasource.password=odeco123
+spring.datasource.username=matadero
+spring.datasource.password=matadero123
 spring.jpa.hibernate.ddl_auto=update
 spring.jpa.sql=true
 ##Aditional properties JPA
