--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Swagger / OpenAPI
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	//implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.6.15.Final'
 	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 	//jasperreport
