--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
 spring.jpa.datasource=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_matadero
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_matadero
+spring.datasource.url=jdbc:postgresql://200.58.81.34:5439/db_matadero
+
 spring.datasource.username=matadero
 spring.datasource.password=matadero123
 spring.jpa.hibernate.ddl_auto=update
